k8s/db-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: "mysql:8.0.0"
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "400Mi"
              cpu: "500m"
            requests:
              memory: "250Mi"
              cpu: "350m"
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
            - name: mysql-initpoint
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: dbpvc
        - name: mysql-initpoint
          configMap:
            name: db-init
