k8s/rails-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: railshop
  namespace: railshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: railshop
  template:
    metadata:
      labels:
        app: railshop
    spec:
      containers:
        - name: railshop
          image: gnachy/railshop:latest
          resources:
            limits:
              memory: "400Mi"
              cpu: "500m"
            requests:
              memory: "250Mi"
              cpu: "350m"
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
