k8s/db-serv.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: railshop
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
