k8s/rails-serv.yml
apiVersion: v1
kind: Service
metadata:
  name: railshop
spec:
  selector:
    app: railshop
  ports:
    - port: 80
      targetPort: 3000
